# rpi-dear-brother

./: .gitignore  README.md  pyproject.toml  requirements.txt
services/: dear-brother-browser.service  dear-brother.service
src/emotion_lighting/: database.py  emotion_tracker.py  emotion_tracker_simple.py  gui_visualization.py  led_controller.py  led_strip.py  main.py  mpr121_touch_sensor.py  reset_strip.py  touch_tracker.py  visualization.py  web_server.py
src/emotion_lighting/api/: models.py  routes.py  websocket.py
src/emotion_lighting/static/: index.html  lang.js  script.js  style.css
src/emotion_lighting/static/js/: lang.js  script.js
