[project]
name = "dear-brother"
version = "0.1.0"
description = "Interactive lighting system based on emotions and touch"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Artem Konevskikh", email = "artem.konevskih@gmail.com"},
]
dependencies = [
    "opencv-python>=4.11.0.86",
    "fer>=22.5.1",
    "keras>=3.8.0",
    "tensorflow>=2.18.0",
    "numpy>=1.26.4",
    "smbus2>=0.5.0",
    "setuptools>=75.8.0",
    "pi5neo>=1.0.5",
    "moviepy==1.0.3",
    "customtkinter>=5.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.9",
]

[project.scripts]
emotion-lighting = "emotion_lighting.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emotion_lighting"]
